--- a/users-app/package.json
+++ b/users-app/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
     "fetch-mock": "^9.11.0",
