--- a/users-app/package.json
+++ b/users-app/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "msw": "^0.27.1",
     "prettier": "^2.2.1"
   }
 }
